<resources>
    <string name="app_name">Esp32-SubGhz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_scanbt">Scan BT</string>
    <string name="menu_connected_device">Connected Device</string>
    <string name="menu_remote_file_explorer">Remote File Explorer</string>

</resources>